# agents

./: .gitignore  AGENTS.md  Makefile  README.md  agents  agents-conventions.md  agents.go  commands.go  config.go  discovery.go  go.mod  main.go  output.go  package.json  paths.go  providers.json  providers.yaml  providers.yaml.example  pyproject.toml  symlink.go  tool-conventions.md  tools.json  tsconfig.json
.beads/: issues.jsonl
docs/: index.html
src/: agents.ts  args.go  args.ts  commands.ts  config.go  config.ts  discovery.go  discovery.ts  index.ts  main.go  main.ts  output.go  output.ts  paths.ts  rule.go  symlink.go  symlink.ts  types.go  types.ts
src/agents_cli/: __init__.py  __main__.py  app.py  config.py  discovery.py  fs.py  harnesses.py  paths.py  sync.py  templates.py  ui.py
src/agents_cli/commands/: __init__.py  _shared.py  command_group.py  doctor_cmd.py  guideline_group.py  init_cmd.py  skill_group.py  status_cmd.py  subagent_group.py  sync_cmd.py
test/: helpers.ts
test/e2e/: cli.test.ts  cli_test.go  common_test.go  general_test.go  rule_test.go
test/unit/: args.test.ts  paths.test.ts
tests/: conftest.py  test_commands_shared.py  test_discovery.py  test_fs.py  test_harnesses.py  test_paths.py
