[project]
name = "agents-cli"
version = "0.2.0"
description = "Maintain one set of AI coding guidelines, skills, commands, and subagents — sync them to every harness (opencode, Claude Code, Gemini CLI, droid, kilo, Codex, Cursor, Amp, ...)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Alex Heritier" }]
keywords = ["ai", "cli", "agents", "claude", "opencode", "gemini", "cursor", "droid", "kilo", "skills"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "tomli>=2.0 ; python_version < '3.11'",
]

[project.scripts]
agents = "agents_cli.app:main"

[project.urls]
Homepage = "https://github.com/alex-heritier/agents-cli"
Issues = "https://github.com/alex-heritier/agents-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents_cli"]

[tool.hatch.build.targets.sdist]
include = ["src/agents_cli", "README.md", "LICENSE"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "N", "C4", "TID", "PT"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
